just pass function?

--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -52,6 +52,7 @@ def get_branches(repo_url, pattern="") {
     return branch_text.split("\n")
 }
 
+@NonCPS
 def get_releases(repo_url) {
     r = get_branches(repo_url, "enterprise-*").collect {
         it - "enterprise-"
@@ -99,6 +100,7 @@ def extract_rpm_version( spec_content ) {
     return ver_matcher[0][1]
 }
 
+@NonCPS
 def cmp_version(String v0, String v1) {
     // compare two version strings.
     // return:
