--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -68,7 +68,7 @@ def get_releases(repo_url) {
     
     s = v_numbers
 
-    s.sort{ a, b -> cmp_version(a, b) }
+    s.sort{ a, b -> return cmp_version(a, b) }
 
     echo "sorted releases = ${s}"
 
