--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -219,7 +219,7 @@ node(TARGET_NODE) {
             branches = get_branches(ose_repo_url, "enterprise-*")
             echo "found branches: ${branches}"
 
-            releases = get_releases(ose_repo_url)
+            String[] releases = get_releases(ose_repo_url)
             echo "found releases: ${releases}"
 
         }
