--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -183,35 +183,35 @@ node(TARGET_NODE) {
     }
 
 
-    stage("test version sort") {
-        a = ['3.10', '2.9', '3.1', '3.5.1']
+    // stage("test version sort") {
+    //     a = ['3.10', '2.9', '3.1', '3.5.1']
 
 
-        echo("comparing ${a[0]} to ${a[1]}: ${cmp_version(a[0], a[1])}")
-        //println(" a = ${a}")
-        //a.sort()
+    //     echo("comparing ${a[0]} to ${a[1]}: ${cmp_version(a[0], a[1])}")
+    //     //println(" a = ${a}")
+    //     //a.sort()
 
-        String[] b = a.sort{f0, f1 -> return cmp_version(f0, f1)}
+    //     String[] b = a.sort{f0, f1 -> return cmp_version(f0, f1)}
         
-        echo(" a = ${a}")
-        echo(" b = ${b}")
+    //     echo(" a = ${a}")
+    //     echo(" b = ${b}")
 
-        x = [3, 5, 1, 2, 7]
-        echo(" x = ${x}")
-        y = x.sort{ 0 }
+    //     x = [3, 5, 1, 2, 7]
+    //     echo(" x = ${x}")
+    //     y = x.sort{ 0 }
 
-        echo(" x = ${x}")
-        echo(" y = ${y}")
+    //     echo(" x = ${x}")
+    //     echo(" y = ${y}")
 
-        echo "---- try again ----"
+    //     echo "---- try again ----"
 
-        m = test_sort()
+    //     m = test_sort()
 
-        echo "${m}"
-        //echo "${m[1]}"
+    //     echo "${m}"
+    //     //echo "${m[1]}"
            
         
-    }
+    // }
 
     
     sshagent([SSH_KEY_ID]) {
