--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -219,7 +219,7 @@ node(TARGET_NODE) {
     
     sshagent([SSH_KEY_ID]) {
         stage("get release branches") {
-            branches = get_branches(ose_repo_url, "enterprise-*")
+            String[] branches = get_branches(ose_repo_url, "enterprise-*")
             echo "found branches: ${branches}"
 
             String[] releases = get_releases(ose_repo_url)
