--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -55,7 +55,7 @@ def get_branches(repo_url, pattern="") {
 
 @NonCPS
 def get_releases(repo_url) {
-    String[] r = get_branches(repo_url, "enterprise-*")
+     r = get_branches(repo_url, "enterprise-*")
 
     // echo("branches = ${r}")
     
@@ -219,10 +219,10 @@ node(TARGET_NODE) {
     
     sshagent([SSH_KEY_ID]) {
         stage("get release branches") {
-            String[] branches = get_branches(ose_repo_url, "enterprise-*")
+            branches = get_branches(ose_repo_url, "enterprise-*")
             echo "found branches: ${branches}"
 
-            String[] releases = get_releases(ose_repo_url)
+            releases = get_releases(ose_repo_url)
             echo "found releases: ${releases}"
 
         }
