just pass function?

--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -221,21 +221,22 @@ node(TARGET_NODE) {
         stage("get release branches") {
             branches = get_branches(ose_repo_url, "enterprise-*")
             echo "found branches: ${branches}"
+        }
 
+        stage("get release versions") {
             releases = get_releases(ose_repo_url)
             echo "found releases: ${releases}"
-
         }
         
-        stage("get master spec file") {
-            spec_file = get_single_file("openshift", "ose", "origin.spec", github_auth_token)
-            echo "Spec file size: ${spec_file.size()}"
-        }
+        // stage("get master spec file") {
+        //     spec_file = get_single_file("openshift", "ose", "origin.spec", github_auth_token)
+        //     echo "Spec file size: ${spec_file.size()}"
+        // }
 
-        stage("extract version-release") {
-            master_version = extract_rpm_version(spec_file)
-            echo "Master version: ${master_version}"
-        }
+        // stage("extract version-release") {
+        //     master_version = extract_rpm_version(spec_file)
+        //     echo "Master version: ${master_version}"
+        // }
             
             
         // get version and release
