--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -221,6 +221,8 @@ node(TARGET_NODE) {
         stage("get release branches") {
             branches = get_branches(ose_repo_url, "enterprise-*")
             echo "found branches: ${branches}"
+
+            echo "branch array: ${branches.split('\n')"
         }
 
         stage("get release versions") {
