--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -261,7 +261,9 @@ node(TARGET_NODE) {
 
             build_is_master = eq_version(BUILD_VERSION, master_version)
             build_is_release = releases.contains(BUILD_VERSION)
-            
+
+            echo "build_is_master : ${build_is_master}"
+            echo "build_is_release: ${build_is_release"
             mode = mode_table[build_is_master][build_is_release]
 
             if (mode == null) {
