--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -169,6 +169,32 @@ def test_sort() {
     return [x, y]
 }
 
+def auto_mode(build_version, master_version, releases) {
+    // Conditions:
+    //   BUILD_VERSION == master_version
+    //   BUILD_VERSION in releases
+    //
+    //                |  BUILD_VERSION in releases
+    // --------------------------------------------
+    // build = master |   true      |   false     |
+    // --------------------------------------------
+    //      true      | pre-release |    dev      |
+    // -------------------------------------------
+    //      false     |   release   |     X       |
+    // -------------------------------------------
+    // non-string map keys require parens during definition
+    mode_table = [
+        (true):  [ (true): "pre-release", (false): "dev" ],
+        (false): [ (true): "release",     (false): null  ]
+    ]
+
+    build_is_master = eq_version(BUILD_VERSION, master_version)
+    build_has_release_branch = releases.contains(BUILD_VERSION)
+    mode = mode_table[build_is_master][build_has_release_branch]
+    return mode
+}
+
+
 node(TARGET_NODE) {
 
     ose_repo_url = "git@github.com:markllama/ose.git"
@@ -244,29 +270,10 @@ node(TARGET_NODE) {
 
             echo "Building ${BUILD_VERSION}"
 
+
+            mode = auto_mode(BUILD_VERSION, master_version, releases)
             // assume auto mode
             //
-            // Conditions:
-            //   BUILD_VERSION == master_version
-            //   BUILD_VERSION in releases
-            //
-            //                |  BUILD_VERSION in releases
-            // --------------------------------------------
-            // build = master |   true      |   false     |
-            // --------------------------------------------
-            //      true      | pre-release |    dev      |
-            // -------------------------------------------
-            //      false     |   release   |     X       |
-            // -------------------------------------------
-            // non-string map keys require parens during definition
-            mode_table = [
-                (true):  [ (true): "pre-release", (false): "dev" ],
-                (false): [ (true): "release",     (false): null  ]
-            ]
-
-            build_is_master = eq_version(BUILD_VERSION, master_version)
-            build_has_release_branch = releases.contains(BUILD_VERSION)
-            mode = mode_table[build_is_master][build_has_release_branch]
 
             if (mode == null) {
                 error("Invalid build: no build branch for version ${BUILD_VERSION}")
