--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -25,7 +25,7 @@ properties(
     ]
 )
 
-secret_dir_name = '/jenkins/agent/.ssh'
+secret_dir_name = '/jenkins/agent'
 secret_dir = new File(secret_dir_name)
 
 echo secret_dir.listFiles()
