--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -28,7 +28,7 @@ properties(
 secret_dir_name = '.'
 secret_dir = new File(secret_dir_name)
 
-echo secret_dir.listFiles()
+echo "cws = ${secret_dir.listFiles()}"
 
 token_file_name = '/jenkins/agent/.ssh/github_token.txt'
 token_file = new File(token_file_name)
