test for valid key

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -52,8 +52,8 @@ node(TARGET_NODE) {
 
     token_file_name = '/jenkins/agent/.ssh/github_token.txt'
     token_file = new File(token_file_name)
-    //github_token = token_file.exists() ? token_file.getText().trim() : ""
-    github_token = token_file.getText().trim()
+    github_token = token_file.exists() ? token_file.getText().trim() : ""
+    //github_token = token_file.getText().trim()
 
     //
     // Given a version number to build, determmine how to configure the
