--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -25,6 +25,21 @@ properties(
     ]
 )
 
+def read_token(token_file) {
+    token_file = new File(token_file_name)
+    token_string = token_file.exists() ? token_file.getText().trim() : ""
+    //github_token = token_file.getText().trim()
+    return token_string
+}
+
+def read_token_sh(token_file) {
+
+    token_string = sh (
+        returnStdout: true,
+        script: "cat ${token_file}"
+    ).trim()
+    return token_string
+}
 
 // get a single file from a github repo
 
@@ -51,10 +66,8 @@ def get_remote_branches() {
 node(TARGET_NODE) {
 
     token_file_name = '/jenkins/agent/.ssh/github_token.txt'
-    token_file = new File(token_file_name)
-    github_token = token_file.exists() ? token_file.getText().trim() : ""
-    //github_token = token_file.getText().trim()
 
+    github_token = read_token(token_file_name)
     //
     // Given a version number to build, determmine how to configure the
     // local git workspacexz
