--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -67,9 +67,23 @@ def extract_version_release(spec_file_contents) {
     version_re = /^Version:\s+([^\s]+)\s*.*$/
     release_re = /^Release:\s+([^\s]+)\s*.*$/
 
+    version_match = spec_file_contents =~ version_re
+    if version_match.matches() {
+        version = version_match[0][1]
+    } else {
+        version = null
+    }
+    
+    release_match = spec_file_contents =~ release_re
+    if release_match.matches() {
+        release = release_match[0][1]
+    } else {
+        release = null
+    }
+    
     return [
-        version: (spec_file_contents =~ version_re)[0][1],
-        release: (spec_file_contents =~ release_re)[0][1]
+        'version': version
+        'release': release
     ]
 }
 
@@ -137,6 +151,8 @@ node(TARGET_NODE) {
             'markllama', 'ose', 'origin.spec', github_token
         )
 
+        echo "master rpm spec size: ${master_rpm_spec.size()}"
+        
         master_version = extract_version_release(master_rpm_spec)
 
         echo master_version
