--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -68,14 +68,14 @@ def extract_version_release(spec_file_contents) {
     release_re = /^Release:\s+([^\s]+)\s*.*$/
 
     version_match = spec_file_contents =~ version_re
-    if version_match.matches() {
+    if (version_match.matches()) {
         version = version_match[0][1]
     } else {
         version = null
     }
     
     release_match = spec_file_contents =~ release_re
-    if release_match.matches() {
+    if (release_match.matches()) {
         release = release_match[0][1]
     } else {
         release = null
