--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -65,9 +65,11 @@ def get_single_file(owner, repo_name, file_name, repo_token) {
  **/
 @NonCPS
 def extract_version_release(spec_file_contents) {
+
     version_re = /^Version:\s+([^\s]+)\s*.*$/
     release_re = /^Release:\s+([^\s]+)\s*.*$/
 
+    echo "checking version match"
     version_match = spec_file_contents =~ version_re
     if (version_match.matches()) {
         version = version_match[0][1]
@@ -75,6 +77,7 @@ def extract_version_release(spec_file_contents) {
         version = null
     }
     
+    echo "checking release match"
     release_match = spec_file_contents =~ release_re
     if (release_match.matches()) {
         release = release_match[0][1]
