--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -66,11 +66,18 @@ def get_single_file(owner, repo_name, file_name, repo_token) {
 @NonCPS
 def extract_version_release(spec_file_contents) {
 
-    version_re = /^Version:\s+([^\s]+)\s*.*$/
-    release_re = /^Release:\s+([^\s]+)\s*.*$/
+    echo "size of spec_file_contents: ${spec_file_contents.size()}"
+    
+    //version_re = /^Version:\s+([^\s]+)\s*.*$/
+    //release_re = /^Release:\s+([^\s]+)\s*.*$/
+    version_re = /^Version:\s+([^\s]+)/
+    release_re = /^Release:\s+([^\s]+)/
 
     echo "checking version match"
     version_match = spec_file_contents =~ version_re
+
+    echo "version_match = ${version_match}"
+    
     if (version_match.matches()) {
         version = version_match[0][1]
     } else {
@@ -87,7 +94,7 @@ def extract_version_release(spec_file_contents) {
         release = null
     }
     echo "${release_match[0]}"
-    echo "release = ${release}"
+    echo "releadse = ${release}"
 
     return [
         'version': version,
