--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -76,9 +76,9 @@ def extract_version_release(spec_file_contents) {
     echo "checking version match"
     version_match = spec_file_contents =~ version_re
 
-    echo "version_match = ${version_match}"
-    
+    echo "version_match = ${version_match}"  
     if (version_match.matches()) {
+        echo "Match exists"
         version = version_match[0][1]
     } else {
         version = null
@@ -87,13 +87,13 @@ def extract_version_release(spec_file_contents) {
     echo "version = ${version}"
     
     echo "checking release match"
-    release_match = spec_file_contents =~ release_re
-    if (release_match.matches()) {
-        release = release_match[0][1]
-    } else {
+//    release_match = spec_file_contents =~ release_re
+//    if (release_match.matches()) {
+//        release = release_match[0][1]
+//    } else {
         release = null
-    }
-    echo "${release_match[0]}"
+//    }
+//    echo "${release_match[0]}"
     echo "releadse = ${release}"
 
     return [
