--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -65,40 +65,27 @@ def get_single_file(owner, repo_name, file_name, repo_token) {
  **/
 @NonCPS
 def extract_version_release(spec_file_contents) {
-
-    echo "size of spec_file_contents: ${spec_file_contents.size()}"
-    
     //version_re = /^Version:\s+([^\s]+)\s*.*$/
     //release_re = /^Release:\s+([^\s]+)\s*.*$/
     version_re = /^Version:\s+([^\s]+)/
     release_re = /^Release:\s+([^\s]+)/
 
-    echo "checking version match"
-    version_match = spec_file_contents =~ version_re
+    echo "size of spec_file_contents: ${spec_file_contents.size()}"
 
-    echo "version_match = ${version_match}"  
-    if (version_match.matches()) {
-        echo "Match exists"
-        version = version_match[0][1]
-    } else {
-        version = null
+    lines = spec_file_contents.tokenize("\n")
+
+    for (line in lines) {
+        version_match = line =~ version_re
+        release_match = line =~ release_re
+
+        if (version_match && release_match) {
+            continue
+        }
     }
-    echo "${version_match[0]}"
-    echo "version = ${version}"
-    
-    echo "checking release match"
-//    release_match = spec_file_contents =~ release_re
-//    if (release_match.matches()) {
-//        release = release_match[0][1]
-//    } else {
-        release = null
-//    }
-//    echo "${release_match[0]}"
-    echo "releadse = ${release}"
 
     return [
-        'version': version,
-        'release': release
+        'version': version_match[0][1],
+        'release': release_match[0][1]
     ]
 }
 
